fixed overflow-x

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -9,6 +9,7 @@
   border: 1px solid #fff;
   opacity: 0.5;
   max-width: 10rem;
+  max-height: 5rem!important;
   text-align: center;
   overflow: hidden;
 
