--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,13 +15,13 @@
 
 
 
-html{
-    @include md {
-        scroll-snap-type: y mandatory;
-        -webkit-overflow-scrolling: touch;
-    }
+// html{
+//     @include md {
+//         scroll-snap-type: y mandatory;
+//         -webkit-overflow-scrolling: touch;
+//     }
 
-}
+// }
 
 html,body {
     width: 100vw;
@@ -30,16 +30,20 @@ html,body {
     padding: 0px;
     overflow-x:hidden; 
     overflow-y: auto;
+    overflow: hidden;
   
 
     @include md {
-        overflow-x:unset;
+        overflow-x:hidden;
         overflow-y:unset;
+        scroll-snap-type: y mandatory;
+        -webkit-overflow-scrolling: touch;
     }
 
     a,a:visited,a:hover,a:focus,a:active {
         text-decoration: none;
         max-width: 14rem;
+        max-height: 4rem;
     }
 
 }
